# Ig-Comment-Scraper

./: README.md  pyproject.toml
src/comment_scraper/: exceptions.py  scraper.py
src/comment_scraper/client/: InstagramClient.py
src/comment_scraper/routes/: routes.py
src/comment_scraper/schemas/: instagramSchemas.py
src/comment_scraper/service/: InstagramService.py
