[project]
name = "comment-scrapper"
version = "0.1.0"
description = ""
authors = [
    {name = "Lucas Pimentel",email = "lucaspimentel808@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.12,<4.0"
dependencies = [
    "fastapi (>=0.121.2,<0.122.0)",
    "apify-client (>=2.3.0,<3.0.0)",
    "dotenv (>=0.9.9,<0.10.0)"
]


[tool.poetry]
packages = [{include = "comment_scrapper", from = "src"}]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"


[tool.pytest.ini_options]
pythonpath = "."


[tool.ruff]
line-length = 79
extend-exclude = ['migratrions']

[tool.ruff.lint]
preview = true
select = ['I', 'F', 'E', 'W', 'PL', 'PT']

[tool.ruff.format]
preview = true
quote-style = 'single'

[tool.taskipy.tasks]
run = 'fastapi dev .\src\comment_scraper\routes\routes.py'
lint = 'ruff check'

pre_test = 'task lint'
test = 'pytest --cov=comment_scrapper -vv'
post_test = 'coverage html'

pre_format = 'ruff check --fix'
format = 'ruff format'

[dependency-groups]
dev = [
    "ruff (>=0.14.5,<0.15.0)",
    "pytest (>=9.0.1,<10.0.0)",
    "taskipy (>=1.14.1,<2.0.0)",
    "pytest-cov (>=7.0.0,<8.0.0)"
]
